--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@clerk/nextjs": "^5.3.7",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "@tanstack/react-query": "^5.53.2",
     "beautiful-react-diagrams": "^0.5.1",
     "class-variance-authority": "^0.7.0",
